# MochiRAG

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile.backend  Dockerfile.frontend  EnsembleRetriever.md  Makefile  MochiRAG RAG戦略実装ガイドライン.md  MochiRAG_design.md  MochiRAG設計.md  PR_review.md  README.md  cli.py  docker-compose.yml  explanation4review.md  mochirag.db  pyproject.toml  pytest.ini  requirements.txt  setup_dev.sh  shared_dbs.json  status.md  testing_guide.md  todo.md
.github/workflows/: docker-build-push.yml  python-app.yml
backend/: auth.py  crud.py  database.py  dependencies.py  main.py  models.py  schemas.py  security.py
backend/routers/: auth.py  chat.py  datasets.py  documents.py  users.py
config/: strategies.yaml
core/: advanced_rag.py  chunking_manager.py  config_loader.py  config_manager.py  context_evolution_service.py  deep_rag.py  deep_rag_strategy.py  document_processor.py  embedding_manager.py  factory.py  ingestion_service.py  llm_manager.py  prompts.py  rag_chain.py  rag_chain_service.py  retriever_manager.py  simple_rag.py  vector_store.py  vector_store_manager.py
core/retriever_strategies/: __init__.py  base.py  basic.py  contextual_compression.py  deep_rag.py  interface.py  multi_query.py  parent_document.py
data/: .gitkeep
data/chroma_db/: chroma.sqlite3
data/sample_docs/: sample.md  sample.txt
data/tmp_uploads/: .gitkeep
docs/: 01_Requirements_Definition.md  REFACTORING.md  refactor.md
docs/api/backend/: main.md
docs/api/core/: ingestion_service.md  llm_manager.md  rag_chain_service.md  retriever_manager.md  vector_store_manager.md
docs/architecture/: 01_System_Architecture.md  02_Implementation_Design.md  implementation_design.md  system_architecture.md
docs/guides/: 03_Testing_Strategy_and_Mocking.md  04_Developer_Setup_Guide.md  05_API_Reference.md  06_Adding_New_RAG_Strategies.md  DEPLOY.md  adding_new_rag_strategies.md  api_reference.md  customizing_ace.md  customizing_prompts.md  developer_setup_guide.md  testing_strategy_and_mocking.md
docs/internal/: review.md
docs/proposals/: EntraID.md
frontend/: __init__.py  api_client.py  app.py  ui_chat.py  ui_sidebar.py
scripts/: push-image.sh
tests/: conftest.py
tests/backend/: __init__.py  test_api_v2.py  test_auth.py  test_chat_endpoint.py  test_crud.py  test_main.py  test_main_integration.py  test_models.py  test_security.py
tests/core/: __init__.py  test_ace_strategy.py  test_chunking_manager.py  test_cli.py  test_config_manager.py  test_config_manager_v2.py  test_document_processor.py  test_embedding_manager.py  test_ingestion_service.py  test_ingestion_service_v2.py  test_llm_manager.py  test_llm_manager_extended.py  test_rag_chain.py  test_retriever_manager.py  test_retriever_manager_v2.py  test_vector_store.py
tests/frontend/: test_app.py
