[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "MochiRAG"
version = "0.1.0"
description = "A Retrieval-Augmented Generation (RAG) system to chat with your documents."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "MochiRAG Contributor", email = "contributor@example.com" }, # Placeholder
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Framework :: FastAPI",
    "Framework :: Streamlit",
]

dependencies = [
    "fastapi[all]",
    "pydantic",
    "passlib[bcrypt]",
    "python-jose[cryptography]",
    "langchain",
    "langchain-community",
    "langchain-core",
    "langchain-ollama",
    "langchain-huggingface",
    "langchain-chroma",
    "sentence-transformers",
    "chromadb",
    "unstructured",
    "PyYAML",
    "langchain-experimental", # Added langchain-experimental
    "markdown",
    "pypdf",
    "reportlab",
    "requests",
    "streamlit", # For the frontend
]

[project.optional-dependencies]
test = [
    "pytest",
    "httpx",
]

[tool.setuptools]
# ...existing code...

[tool.setuptools.packages.find]
include = ["backend", "core", "frontend"]
# data ディレクトリがパッケージでない場合は除外してください